reset things back to a starting point

--- a/.cdn-config.yml
+++ b/.cdn-config.yml
@@ -1,9 +1,11 @@
 ---
 name: CDN Demo Library
-description: You shouln't ever actually depend on this incredibly undependable library.
+description: You shouldn't ever actually depend on this incredibly undependable library.
 resources:
   - demo.js
-  - src: included/**
-    dest: relocated/
+#  - src: included/**
+#    dest: relocated/
+entrypoints:
+  demo.js: 'Main Entrypoint'
 docs: https://github.com/ThatJoeMoore/byu-web-cdn-demo-lib
 
