--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,9 +17,8 @@ jobs:
       - run: echo "I'm doing stuff!!"
       - run: |
           mkdir -p /tmp/artifacts
-          cp -R ./*.js included excluded /tmp/artifacts
+          cp -R demo.js included excluded /tmp/artifacts
 
       - store_artifacts:
           path: /tmp/artifacts
-          destination: artifact-file
       
