--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,4 +24,20 @@ jobs:
       - store_artifacts:
           path: /tmp/artifacts
           destination: /
+workflows:
+  version: 2
+  un-tagged-build:
+    jobs:
+      - build:
+          filters:
+            tags:
+              ignore: /^\d+\.\d+\.\d+/
+  tagged-build:
+    jobs:
+      - build:
+          filters:
+            branches:
+              ignore: /.*/
+	    tags:
+        only: /^\d+\.\d+\.\d+/
       
